<resources>
    <string name="app_name">El Daftar</string>
    <string name="empty_view_title_text">ADD SOME NUMBERS</string>
    <string name="empty_view_note_text">ADD SOME NOTES</string>
    <string name="number_title_text">0</string>
    <string name="number_title_text2">0000000</string>
    <string name="NoThing_To_Show">NoThing To Show</string>
    <string name="Name">Name</string>
    <string name="Title">Title</string>
    <string name="Enter_Name">Enter Name</string>
    <string name="Enter_Title">Enter Title</string>
    <string name="Numbers">Numbers</string>
    <string name="Daily_Wallet">Balance</string>

    <string name="default_web_client_id" translatable="false">107293982911-o1hie00hpccbj4012pvo5t4t2lriq6ni.apps.googleusercontent.com</string>
    <string name="Enter_Number">Enter Number</string>
    <string name="Notes">Notes</string>
    <string name="Enter_Notes">Enter Notes</string>
    <string name="Settings">Settings</string>
    <string name="lang">Language</string>

    <string name="Deleted">Deleted</string>
    <string name="DeleteAll">Delete All</string>
    <string name="Save">Save</string>
    <string name="Search">Search</string>
    <string name="sync">sync</string>
    <string name="Error_With_Saving">Error With Saving</string>
    <string name="Saved">Saved</string>
    <string name="Error_With_Update">Error With Update</string>
    <string name="Updated">Updated</string>
    <string name="editor_activity_title_new_number">Add a New Number</string>
    <string name="editor_activity_title_edit_number">Edit Number</string>
    <string name="editor_activity_title_new_note">Add a New Note</string>
    <string name="editor_activity_title_edit_note">Edit Note</string>
    <string name="edit_img">Edit</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_Number_successful">Number deleted</string>
    <string name="editor_delete_Number_failed">Error with deleting</string>
    <string name="delete_dialog_msg">Delete this Number?</string>
    <string name="clear_dialog_msg_value">Clear this Value?</string>
    <string name="delete_note_dialog_msg">Delete this Note?</string>
    <string name="delete_note_selected_dialog_msg">Delete this Notes?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="editor_delete_Numbers_successful">Number deleted</string>
    <string name="editor_delete_Numbers_failed">Error with deleting</string>
    <string name="delete_all_dialog_msg">Delete All Number?</string>
    <string name="delete_all_notes_dialog_msg">Delete All Notes?</string>
    <string name="logout_dialog_msg">Are you sure you want to logout?</string>
    <string name="retrieve_dialog_msg">Are you want restore data?</string>
    <string name="Copied">Number Is Copied</string>
    <string name="Note_Copied">Note Is Copied</string>
    <string name="Please_insert_name">Please insert a name</string>
    <string name="Please_insert_number">Please insert a number</string>
    <string name="Please_insert_note">Please insert a note</string>
    <string name="Press_back_again">Press back again to exit</string>

    <string name="pref_lang_label">Choose Language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>

    <string name="pref_lang_Key" translatable="false">Language</string>
    <string name="pref_lang_English_value" translatable="false">english</string>
    <string name="pref_lang_Arabic_value" translatable="false">arabic</string>


    <string name="enter">Add</string>
    <string name="clear">Clear</string>
    <string name="notes">Notes</string>
    <string name="number">Number</string>
    <string name="value">Value</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">phone</string>
    <string name="phone_or_email">Phone/Email</string>
    <string name="skip">Skip</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="Password_length">Password length at least 6 characters</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="wait">Please wait....</string>
    <string name="sending">Sending....</string>
    <string name="failed">Failed....</string>
    <string name="login_failed">Login Failed....</string>
    <string name="invalid_value">invalid value</string>
    <string name="error_inter_net">No internet connection</string>
    <string name="registered">Registered....</string>
    <string name="invalid_confirm_password">Confirm password not match</string>
    <string name="logout">logout</string>
    <string name="recover_password">Recover Password</string>
    <string name="reset">Reset</string>
    <string name="email_sent">Email sent</string>
    <string name="settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="language">language</string>
    <string name="arabic_key">العربية</string>
    <string name="english_key">English</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="selected">selected</string>
    <string name="darkMode">Dark Mode</string>
    <string name="lightMode">Light Mode</string>
    <string name="Name_is_exist">this name is exist</string>
    <string name="total_sum">Total:</string>
    <string name="refresh">refresh</string>

</resources>
