<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">

    <item
        android:id="@+id/sync"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/deletall"
        android:title="@string/DeleteAll"
        android:icon="@drawable/delete_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/search"
        android:title="@string/Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/lang"
        android:title="@string/lang"
        android:icon="@drawable/ic_language"
        app:showAsAction="never"/>

    <item
        android:id="@+id/darkMode"
        android:title="@string/darkMode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>


</menu>