<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">

    <item
        android:id="@+id/undoDaily"
        android:icon="@drawable/ic_undo_false"
        android:title="@string/undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/redoDaily"
        android:icon="@drawable/ic_redo_false"
        android:title="@string/redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchDaily"
        android:title="@string/Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"/>


    <item
        android:id="@+id/lang_daily"
        android:title="@string/lang"
        android:icon="@drawable/ic_language"
        app:showAsAction="never"/>

    <item
        android:id="@+id/darkMode_daily"
        android:title="@string/darkMode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout_daily"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>