<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity"
    android:background="@color/colorPrimaryLight"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar2_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            >

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:hint="@string/Enter_Name"
            android:padding="5dp"
            android:inputType="textCapWords"
            android:background="@drawable/btn_edittext"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/Number"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <EditText
            android:id="@+id/edit_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="17"
            android:padding="5dp"
            android:hint="@string/Enter_Number"
            android:inputType="number"
            android:background="@drawable/btn_edittext"

            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/Notes"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-medium"
        android:textSize="24sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:hint="@string/Enter_Notes"
        android:gravity="start"
        android:textStyle="normal"
        android:inputType="textMultiLine|textCapWords"
        android:background="@drawable/btn_edittext"

        />
    </LinearLayout>


</LinearLayout>