<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar.Bridge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:src="@drawable/eldaftar_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                style="@style/line_box"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:textColorHint="@color/colorAccent"-->
<!--                app:hintTextAppearance="@style/HintText">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/sign_up_fragment_txt_phone"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:hint="@string/phone"-->
<!--                    android:inputType="phone"-->
<!--                    android:maxLength="50"-->
<!--                    android:maxLines="1"-->
<!--                    android:singleLine="true"-->
<!--                    android:textColor="@color/colorPrimary"-->
<!--                    android:textSize="21sp" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/line_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorAccent"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_fragment_txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="21sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/line_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorAccent"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimaryLight"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_fragment_txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="21sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/line_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorAccent"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimaryLight"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_fragment_txt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="21sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/sign_up_fragment_btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="-4dp"
                android:layout_marginEnd="-4dp"
                android:background="@drawable/btn_blue_background"
                android:text="@string/sign_up"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="40dp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>